# agentcore-cli

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPORT_TESTING_SUMMARY.md  README.md  TODO.md  agentcore-cli-ci.html  agentcore-cli-issues.html  agentcore-cli-prs.html  bedrock-agentcore-sdk-python-ci.html  bedrock-agentcore-sdk-python-issues.html  bedrock-agentcore-sdk-python-prs.html  bedrock-agentcore-sdk-typescript-ci.html  bedrock-agentcore-sdk-typescript-issues.html  bedrock-agentcore-sdk-typescript-prs.html  bedrock-agentcore-starter-toolkit-ci.html  bedrock-agentcore-starter-toolkit-issues.html  bedrock-agentcore-starter-toolkit-prs.html  charts.js  ci.html  esbuild.config.mjs  index.html  issues.html  npm-shrinkwrap.json  package-lock.json  package.json  preview-version.json  prs.html  update.sh  vitest.config.ts
agents/: .gitignore  config.yaml.example  pyproject.toml
agents/bug_fixer/: batch.py
agents/bug_fixer/prompts/: executor.md  planner.md  reviewer.md  setup.md
agents/core/: harness_client.py  parsing.py  progress.py
agents/feature_builder/: main.py
agents/feature_builder/prompts/: agentic_test.md  decompose.md  execute_task.md  executor.md  fixer.md  reviewer.md  setup.md
agents/orchestrations/build_from_docs/: orchestrator.py
agents/orchestrations/build_from_docs/phases/: agentic_test.py  complete.py  decompose.py  execute_task.py  parse_contracts.py  review.py  verify_task.py
agents/orchestrations/fix_and_review/: orchestrator.py  partitioning.py
agents/orchestrations/fix_and_review/phases/: babysit.py  (+7 more)
(+865 files in other folders)
