[project]
name = "agentcore-agents"
version = "0.1.0"
description = "Multi-agent orchestration for automated issue resolution and feature building"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.94",
    "botocore>=1.42.94",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "urllib3>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
